<resources>
    <string name="app_name">Pra Asses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nim">676181063</string>
    <string name="nama">Naufal Sayyid Furqoon</string>
    <string name="kelas">D3RPLA-42-03</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="threeDot">...</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Tinggi</string>
    <string name="luas">Luas =</string>
    <string name="keliling">Keliling =</string>
    <string name="share">Share</string>
    <string name="hasilLuas">0</string>
    <string name="hasilKeliling">0</string>
    <string name="about">About</string>
</resources>
