<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="luas"
            type="Integer" />
        <variable
            name="keliling"
            type="Integer" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.praasses.PersegiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_panjang"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_panjang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/panjang" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_lebar"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_panjang">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_lebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lebar" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/hitungPersegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/hitung"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_lebar" />

        <TextView
            android:id="@+id/tv_luas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/luas"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hitungPersegi" />

        <TextView
            android:id="@+id/tv_keliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/keliling"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_luas" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_keliling" />

        <TextView
            android:id="@+id/hasilLuas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@={luas}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_luas"
            app:layout_constraintStart_toEndOf="@+id/tv_luas"
            app:layout_constraintTop_toTopOf="@+id/tv_luas" />

        <TextView
            android:id="@+id/hasilKeliling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@={keliling}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_keliling"
            app:layout_constraintStart_toEndOf="@+id/tv_keliling"
            app:layout_constraintTop_toTopOf="@+id/tv_keliling" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>